fix(checkbox): fix checkbox misalignment (#283)
- update request modal checkbox to align text description properly

[Delivers #161755477]

--- a/src/components/CheckBox/Checkbox.scss
+++ b/src/components/CheckBox/Checkbox.scss
@@ -34,6 +34,11 @@
   }
 }
 
+.flex-row {
+  display: flex;
+  flex-direction: row;
+}
+
 .ticksvg{
   height: 14px;
   width: 13px;
